2010-01-17  James Wilkinson <james@slor.net>
* configure.ac: define SUPPORTS_PLATFORM_CONFIGSAVE and SUPPORTS_PLATFORM_CONFIGURE for DirectX build.


2010-01-14  Piotr Fusik  <fox@scene.pl>
* win32/msc/config.h: #define WIN32 -> HAVE_WINDOWS_H

* win32/render_gdi.obj: was incidentally committed


2010-01-13  James Wilkinson <james@slor.net>
* configure.ac: removed -Wredundant-decls for BeOS

* configure.ac, ui.c, win32/render_*.*, win32/screen_win32.[ch], win32/main.*:
  Changes to support new DirectX code under gcc.

* configure.ac, atari.[ch], atari_sdl.c, compfile.c, devices.c, platform.h, pokey.c, rdevice.c, rtime.c, ui.[ch], ui_basic.c, util.[ch], wince/port/missing.h:
  Changes from WIN32 to DIRECTX and HAVE_WINDOWS_H definitions.


2010-01-12  James Wilkinson <james@slor.net>
* atari_sdl.c:
  Committed patch by Tomaz Krasuski to fix DirectX default for Win32 SDL driver.
  Also made change to correct garbage column in some scaling modes.


2010-01-10  Piotr Fusik  <fox@scene.pl>
* util/colormix.asx, util/colormix.xex: program for testing PAL delay line;
  use arrow keys and space


2010-01-07  Piotr Fusik  <fox@scene.pl>
* ui.c: wrapped UpdateColourControls into ifdef

* colours.c, colours_ntsc.c, colours_pal.c, sio.c: killed MSVC warnings

* win32/msc/config.h, win32/msc/Makefile: updated (colour_ntsc etc.)

  Commiting patch submitted by David Dahlstrom <ddahlstrom@charter.net>
* platform.h, ui.c, ui.h, ui_basic.c, win32/atari_win32.[ch],
  win32/joystick.[ch], win32/main.[ch], win32/main.cpp, win32/render_*.*,
  win32/screen_win32.[ch]: display and controller enhancements


2009-12-28  Piotr Fusik  <fox@scene.pl>
* configure.ac, devices.c: MKDIR_TAKES_ONE_ARG for MinGW

* colours_ntsc.h: M_PI for MinGW

  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* DOC/USAGE, atari.c, atari800.man, atari_sdl.c, colours.[ch],
  colours_external.[ch], colours_ntsc.[ch], colours_pal.[ch] filter_ntsc.[ch],